[package]
name = "fifthsite"
version = "0.1.0"
authors = ["Alex P. <al@imalex.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
log = "0.4"
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2.1"
handlebars = { version="3.0.1", features=["dir_source"] }
serde_json = "1.0"
pulldown-cmark = { version = "0.7", default-features = false, features = ["simd"] }
